--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -78,6 +78,10 @@
         "react-markdown": "^9.0.1",
         "react-resizable-panels": "^1.0.5",
         "react-router-dom": "^6.21.1",
+        "react-syntax-highlighter": "^15.5.0",
+        "react-textarea-autosize": "^8.5.3",
+        "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
         "sharp": "^0.33.2",
         "sonner": "^1.3.1",
         "styled-components": "5.3.11",
@@ -109,6 +113,7 @@
         "@types/react": "18.2.46",
         "@types/react-dom": "18.2.18",
         "@types/react-is": "18.2.4",
+        "@types/react-syntax-highlighter": "^15.5.11",
         "@types/styled-components": "5.1.34",
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "autoprefixer": "^10.4.14",
