Add LangChain Document Splitter

--- a/packages/plugins/document-processor/package.json
+++ b/packages/plugins/document-processor/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@ocular/types": "*",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "gpt-tokenizer": "^2.1.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
