--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,29 @@ services:
     volumes:
       - ./redis-data:/data
 
+  zookeeper:
+    image: "bitnami/zookeeper:latest"
+    ports:
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: "bitnami/kafka:latest"
+    user: root
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    volumes:
+      - ./Kafka:/bitnami/kafka
+    depends_on:
+      - zookeeper
+
   ocular-db:
     image: postgres:14-alpine
     ports:
