Add Kafka Queue Service To Ocular

--- a/packages/ocular/tsconfig.spec.json
+++ b/packages/ocular/tsconfig.spec.json
@@ -1,14 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["node"]
-  },
   "include": [
-    "jest.config.ts",
-    "src/**/*.test.ts",
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+    "./src/**/*",
+    "index.d.ts",
+    "./src/**/__tests__",
+    "./src/**/__mocks__"
+  ],
+  "exclude": ["node_modules"]
 }
