--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -10,6 +10,8 @@
   ],
   "author": "Louis Luxa Murerwa",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
     "@types/ora": "^3.2.0",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
@@ -23,7 +25,7 @@
     "dev": "npm run build && NODE_ENV=development nodemon dist/ocular/src/main.js",
     "start": "npm run build && nodemon dist/ocular/src/main.js",
     "clean": "rimraf dist node_modules",
-    "test": "jest --runInBand --bail --detectOpenHandles --forceExit",
+    "test": "jest src --detectOpenHandles",
     "typeorm": "npm run build && typeorm-ts-node-esm -d dist/ocular/src/data-source.js"
   },
   "dependencies": {
@@ -38,6 +40,8 @@
     "fast-glob": "^3.3.2",
     "fs-exists-cached": "^1.0.0",
     "ioredis-mock": "^8.9.0",
+    "kafka-js": "^0.0.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "ora": "^3.4.0",
     "passport": "^0.7.0",
