Add Functionality To Enqueue Indexable Documents To Kafka For Processing

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitThis": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
   },
   "include": ["src"],
   "exclude": [
