--- a/packages/ocular/tsconfig.json
+++ b/packages/ocular/tsconfig.json
@@ -17,6 +17,7 @@
     // "noImplicitThis": true,
     // "allowJs": true,
     "skipLibCheck": true,
+    "downlevelIteration": true,
     // "downlevelIteration": true, // to use ES5 specific tooling
     // "resolveJsonModule": true
     "types": ["node", "jest"]
