--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.18.0",
     "fast-glob": "^3.3.2",
     "fs-exists-cached": "^1.0.0",
+    "ioredis": "^5.4.1",
     "ioredis-mock": "^8.9.0",
     "kafka-js": "^0.0.0",
     "kafkajs": "^2.2.4",
@@ -48,6 +49,7 @@
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "rate-limiter-flexible": "^5.0.3",
     "typeorm": "^0.3.20"
   }
 }
