Add Kafka and Open AI keys

--- a/env.dev.example
+++ b/env.dev.example
@@ -5,6 +5,7 @@ DATABASE_NAME=ocular
 QDRANT_DB_URL=http://localhost:6333
 UI_CORS=http://localhost:9000
 REDIS_URL=redis://localhost:6379
+KAFKA_URL=localhost:9092
 
 
 # Required Azure Open AI credentials
@@ -14,6 +15,11 @@ AZURE_OPEN_AI_EMBEDDER_DEPLOYMENT_NAME=
 AZURE_OPEN_AI_EMBEDDING_MODEL=
 AZURE_OPEN_AI_CHAT_DEPLOYMENT_NAME=
 AZURE_OPEN_AI_CHAT_MODEL=
+
+# Required Open AI credentials
+OPEN_AI_KEY=
+OPEN_AI_EMBEDDING_MODEL=
+OPEN_AI_CHAT_MODEL=
 
 # Add these if you want to enable index data from apps
 
