--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -32,6 +32,7 @@
     "@azure/search-documents": "^12.0.0",
     "@ocular/types": "*",
     "@ocular/utils": "*",
+    "@xenova/transformers": "^2.17.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
