--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "@azure/search-documents": "^12.0.0",
+    "@medusajs/file-local": "^1.0.3",
     "@ocular/types": "*",
     "@ocular/utils": "*",
+    "@types/multer": "^1.4.11",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
