--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -45,6 +45,23 @@ services:
       - DATABASE_URL=postgresql://ocular:ocular@ocular-db:5432/ocular
       - DATABASE_NAME=ocular
     command: npm run typeorm migration:run
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    depends_on:
+      - ocular-db
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ocularpostgres@useocular.com
+      PGADMIN_DEFAULT_PASSWORD: ocular
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  pgadmin-data:
 
 configs:
   qdrant_config:
