--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -54,7 +54,7 @@
     "path": "^0.12.7",
     "puppeteer": "^22.8.0",
     "typeorm": "^0.3.20",
-    "uuid": "^9.0.1"
-    "rate-limiter-flexible": "^5.0.3",
+    "uuid": "^9.0.1",
+    "rate-limiter-flexible": "^5.0.3"
   }
 }
