--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/jest": "^29.5.12",
     "npm": "^10.5.0",
+    "pdf-parse": "^1.1.1",
     "scrypt-kdf": "^2.0.1"
   },
   "devDependencies": {
