--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -34,6 +34,7 @@
     "@ocular/types": "*",
     "@ocular/utils": "*",
     "@types/multer": "^1.4.11",
+    "@xenova/transformers": "^2.17.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
