--- a/packages/ocular-models-server/requirements.txt
+++ b/packages/ocular-models-server/requirements.txt
@@ -1,4 +1,5 @@
 transformers==4.30.2
 torch==2.0.1
-sacremoses==0.0.53
-sentencepiece==0.1.99
+fastapi==0.70.0
+transformers==4.30.2
+uvicorn==0.15.0
