--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: packages/ocular-models-server/Dockerfile.models
     ports:
-      - 6000:6000
+      - 8000:8000
 
   qdrant:
     image: qdrant/qdrant:latest
@@ -75,6 +75,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://ocular:ocular@ocular-db:5432/ocular
       - DATABASE_NAME=ocular
+      - PUPPETEER_SKIP_DOWNLOAD=true
     command: npm run typeorm migration:run
 
   pgadmin:
