--- a/packages/ocular-models-server/Dockerfile.models
+++ b/packages/ocular-models-server/Dockerfile.models
@@ -18,14 +18,16 @@ RUN apt-get update && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
+
+
 # Set the working directory within the container
 WORKDIR /app
 
 # Download and Install The Hugging Face Models
 # Copy necessary files to the container
-COPY requirements.txt .
-COPY download_models.py .
-COPY server.py .
+COPY packages/ocular-models-server/requirements.txt .
+COPY packages/ocular-models-server/download_models.py .
+COPY packages/ocular-models-server/server.py .
 
 # Create a virtual environment in the container
 RUN python3 -m venv .venv
