--- a/packages/apps/confluence/package.json
+++ b/packages/apps/confluence/package.json
@@ -9,7 +9,8 @@
     "prepare": "cross-env NODE_ENV=production npm run build",
     "test": "jest --passWithNoTests src",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "clean": "rimraf dist node_modules"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
