Add Upload CSV and Upload Markdown Files

--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
     "cors": "^2.8.5",
+    "d3-dsv": "^2.0.0",
     "express-session": "^1.18.0",
     "fast-glob": "^3.3.2",
     "fs-exists-cached": "^1.0.0",
@@ -47,6 +48,7 @@
     "kafka-js": "^0.0.0",
     "kafkajs": "^2.2.4",
     "langchain": "^0.1.37",
+    "mammoth": "^1.7.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "ora": "^3.4.0",
