--- a/packages/plugins/azure-open-ai/package.json
+++ b/packages/plugins/azure-open-ai/package.json
@@ -20,7 +20,7 @@
    "dependencies": {
       "@ocular/types": "*",
       "@ocular/utils": "*",
-      "openai": "^4.29.2",
+      "dotenv": "^16.4.5",
       "tiktoken": "^1.0.13"
    }
 }
