--- a/packages/apps/notion/package.json
+++ b/packages/apps/notion/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.23.3"
   },
   "dependencies": {
-    "async-sema": "^3.1.1"
+    "async-sema": "^3.1.1",
+    "randomatic": "^3.1.1"
   }
 }
