--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/types",
     "packages/ocular",
     "packages/plugins/*",
-    "packages/apps/*"
+    "packages/apps/*",
+    "packages/ocular-telemetry"
   ],
   "scripts": {
     "build": "turbo run build  --concurrency=50% --no-daemon",
