--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/types",
     "packages/ocular",
     "packages/plugins/*",
-    "packages/apps/*"
+    "packages/apps/*",
+    "packages/ocular-telemetry"
   ],
   "scripts": {
     "build": "turbo run build  --concurrency=50% --no-daemon",
@@ -20,7 +21,8 @@
     "@types/jest": "^29.5.12",
     "npm": "^10.5.0",
     "pdf-parse": "^1.1.1",
-    "scrypt-kdf": "^2.0.1"
+    "scrypt-kdf": "^2.0.1",
+    "ocular-telemetry": "^1.0.0"
   },
   "devDependencies": {
     "eslint-config-next": "^14.1.4"
