--- a/packages/ocular-ui/.eslintrc.json
+++ b/packages/ocular-ui/.eslintrc.json
@@ -37,7 +37,8 @@
     }
   ],
   "rules": {
-    "@next/next/no-html-link-for-pages": "off"
+    "@next/next/no-html-link-for-pages": "off",
+    "react-hooks/exhaustive-deps": "off"
   },
   "env": {
     "jest": true
