--- a/env.local.example
+++ b/env.local.example
@@ -1,22 +1,20 @@
+# Database URL + REDIS + QDRANT running Docker
+NODE_ENV=development
+DATABASE_URL=postgresql://ocular:ocular@localhost:5433/ocular
+DATABASE_NAME=ocular
+QDRANT_DB_URL=http://localhost:6333
+UI_CORS=http://localhost:9000
+REDIS_URL=redis://localhost:6379
+KAFKA_URL=localhost:9092
+USE_LOCAL_EMBEDDER=true # Use local embedder instead of Azure or OpenAI
+OCULAR_MODELS_SERVER_URL=http://localhost:8000
 
-# Required Azure Open AI credentials
-AZURE_OPEN_AI_KEY=
-AZURE_OPEN_AI_ENDPOINT=
-AZURE_OPEN_AI_EMBEDDER_DEPLOYMENT_NAME=
-AZURE_OPEN_AI_EMBEDDING_MODEL=
-AZURE_OPEN_AI_CHAT_DEPLOYMENT_NAME=
-AZURE_OPEN_AI_CHAT_MODEL=
+# Required Open AI Keys
+OPEN_AI_KEY=
+OPEN_AI_CHAT_MODEL=
 
+
+# OAUTH Credientials - Add these if you want to enable OAUTH for indexing apps
 # Apps Installed
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-# Asana
-ASANA_CLIENT_ID=
-ASANA_CLIENT_SECRET=
-
-# GitHub
-GITHUB_APP_ID=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GITHUB_PRIVATE_KEY_PATH=
