Add New Command npm run local

--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -22,7 +22,8 @@
     "watch": "tsc --build --watch",
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
-    "dev": "npm run build && nodemon dist/ocular/src/main.js",
+    "dev": "cross-env CONFIG_FILE=core-config.js NODE_ENV=development npm run start",
+    "local": "cross-env CONFIG_FILE=core-config-local.js NODE_ENV=local npm run start",
     "start": "npm run build && nodemon dist/ocular/src/main.js",
     "clean": "rimraf dist node_modules",
     "test": "jest src --detectOpenHandles",
