--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -27,7 +27,8 @@
     "start": "npm run build && nodemon dist/ocular/src/main.js",
     "clean": "rimraf dist node_modules",
     "test": "jest src --detectOpenHandles",
-    "typeorm": "npm run build && typeorm-ts-node-esm -d dist/ocular/src/data-source.js"
+    "typeorm": "npm run build && cross-env CONFIG_FILE=core-config.js typeorm-ts-node-esm -d dist/ocular/src/data-source.js",
+    "typeorm:local": "npm run build && cross-env CONFIG_FILE=core-config-local.js typeorm-ts-node-esm -d dist/ocular/src/data-source.js"
   },
   "dependencies": {
     "@azure/search-documents": "^12.0.0",
