--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
-    "npm": "^10.5.0",
+    "ocular-telemetry": "^1.0.0",
     "pdf-parse": "^1.1.1",
-    "scrypt-kdf": "^2.0.1",
-    "ocular-telemetry": "^1.0.0"
+    "scrypt-kdf": "^2.0.1"
   },
   "devDependencies": {
     "eslint-config-next": "^14.1.4"
