--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -49,6 +49,7 @@ services:
       - zookeeper
     environment:
       - KAFKA_BROKER_ID=1
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_LISTENERS=PLAINTEXT://:9092,EXTERNAL://kafka:29092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://:9092,EXTERNAL://kafka:29092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
