--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -22,12 +22,12 @@
     "watch": "tsc --build --watch",
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
-    "dev": "cross-env CONFIG_FILE=core-config.js NODE_ENV=development npm run start",
+    "dev": "cross-env CONFIG_FILE=core-config-local.js NODE_ENV=development npm run start",
     "local": "cross-env CONFIG_FILE=core-config-local.js NODE_ENV=local npm run start",
     "start": "npm run build && nodemon dist/ocular/src/main.js",
     "clean": "rimraf dist node_modules",
     "test": "jest src --detectOpenHandles",
-    "typeorm": "npm run build && cross-env CONFIG_FILE=core-config.js typeorm-ts-node-esm -d dist/ocular/src/data-source.js",
+    "typeorm:dev": "npm run build && cross-env CONFIG_FILE=core-config-dev.js typeorm-ts-node-esm -d dist/ocular/src/data-source.js",
     "typeorm:local": "npm run build && cross-env CONFIG_FILE=core-config-local.js typeorm-ts-node-esm -d dist/ocular/src/data-source.js"
   },
   "dependencies": {
