Clean Up Ocular Docker Commands (#105)
* Modify Local Ocular Env

* Add New Command npm run local

* Fixed Docker Local Command

* Optimize Docker Commands

* Fix Kafka Command

* Clean Up Docker Commands

--- a/packages/ocular/Dockerfile.local
+++ b/packages/ocular/Dockerfile.local
@@ -1,6 +1,10 @@
 
 FROM node:18-alpine
 
+
+RUN apk update && \
+  apk add chromium
+
 WORKDIR /usr/src/app
 
 RUN npm cache clean --force
@@ -27,8 +31,4 @@ COPY . .
 RUN npm install --verbose
 RUN turbo build
 
-EXPOSE 8080
-
 WORKDIR /usr/src/app/packages/ocular
-
-CMD ["NODE_ENV", "=", "development", "npm", "run", "start"]
