--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,5 +1,12 @@
 version: "3"
 services:
+  ocular-models-server:
+    container_name: ocular-models-server
+    build:
+      context: .
+      dockerfile: packages/ocular-models-server/Dockerfile.models
+    ports:
+      - 8000:8000
   qdrant:
     image: qdrant/qdrant:latest
     restart: always
@@ -11,9 +18,6 @@ services:
       - 6333
       - 6334
       - 6335
-    configs:
-      - source: qdrant_config
-        target: /qdrant/config/production.yaml
     volumes:
       - ./qdrant_data:/qdrant_data
 
@@ -25,26 +29,45 @@ services:
     volumes:
       - ./redis-data:/data
 
+  zookeeper:
+    image: "confluentinc/cp-zookeeper:latest"
+    ports:
+      - "2181:2181"
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+    volumes:
+      - ./log4j.properties:/opt/bitnami/zookeeper/conf/log4j.properties
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    user: root
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    depends_on:
+      - zookeeper
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_LISTENERS=PLAINTEXT://:9092,EXTERNAL://kafka:29092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://:9092,EXTERNAL://kafka:29092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_LOG4J_LOGGERS=org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
+    volumes:
+      - ./Kafka:/bitnami/kafka
+      - ./log4j.properties:/etc/kafka/log4j.properties
+
   ocular-db:
     image: postgres:14-alpine
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       POSTGRES_PASSWORD: ocular
       POSTGRES_USER: ocular
       POSTGRES_DB: ocular
-
-  ocular-db-migration:
-    container_name: ocular-db-migration
-    depends_on:
-      - ocular-db
-    build:
-      context: .
-      dockerfile: packages/ocular/Dockerfile.local
-    environment:
-      - DATABASE_URL=postgresql://ocular:ocular@ocular-db:5432/ocular
-      - DATABASE_NAME=ocular
-    command: npm run typeorm migration:run
 
   ocular-backend:
     container_name: ocular-backend
@@ -54,22 +77,24 @@ services:
     depends_on:
       ocular-db:
         condition: service_started
-      ocular-db-migration:
-        condition: service_completed_successfully
       qdrant:
         condition: service_started
-      # typesense:
-      #   condition: service_started
+      ocular-models-server:
+        condition: service_started
+      kafka:
+        condition: service_started
     ports:
       - 9000:9000
+    command: /bin/sh -c "npm run typeorm:local migration:run && npm run local"
     environment:
       - DATABASE_URL=postgresql://ocular:ocular@ocular-db:5432/ocular
       - DATABASE_NAME=ocular
       - NODE_ENV=development
       - QDRANT_DB_URL=http://qdrant:6333
-      # - TYPESENSE_HOST=typesense
       - UI_CORS=http://ocular-ui:9000
       - REDIS_URL=redis:6379
+      - KAFKA_URL=kafka:29092
+      - OCULAR_MODELS_SERVER_URL=http://ocular-models-server:8000
 
   ocular-ui:
     container_name: ocular-ui
@@ -80,8 +105,3 @@ services:
       - 3001:3001
     depends_on:
       - ocular-backend
-
-configs:
-  qdrant_config:
-    content: |
-      log_level: INFO
