--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,7 @@ services:
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:latest"
+    image: "confluentinc/cp-zookeeper:latest"
     ports:
       - "2181:2181"
     environment:
@@ -38,23 +39,33 @@ services:
       - ZOOKEEPER_TICK_TIME=2000
     volumes:
       - ./log4j.properties:/opt/bitnami/zookeeper/conf/log4j.properties
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+    volumes:
+      - ./log4j.properties:/opt/bitnami/zookeeper/conf/log4j.properties
 
   kafka:
+    image: confluentinc/cp-kafka:latest
     image: confluentinc/cp-kafka:latest
     user: root
     ports:
       - "9092:9092"
     depends_on:
       - zookeeper
+    depends_on:
+      - zookeeper
     environment:
       - KAFKA_BROKER_ID=1
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_LISTENERS=PLAINTEXT://:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_LOG4J_LOGGERS=org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
+      - KAFKA_LOG4J_LOGGERS=org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
     volumes:
       - ./Kafka:/bitnami/kafka
+      - ./log4j.properties:/etc/kafka/log4j.properties
       - ./log4j.properties:/etc/kafka/log4j.properties
 
   ocular-db:
@@ -76,7 +87,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://ocular:ocular@ocular-db:5432/ocular
       - DATABASE_NAME=ocular
-    command: npm run typeorm:local migration:run
+    command: npm run typeorm:dev migration:run
 
   pgadmin:
     image: dpage/pgadmin4
