--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -55,6 +55,7 @@
         "clsx": "^1.2.1",
         "cmdk": "^0.2.0",
         "date-fns": "^3.0.6",
+        "framer-motion": "^11.2.10",
         "fs": "^0.0.1-security",
         "lucide-preact": "^0.330.0",
         "lucide-react": "^0.105.0-alpha.4",
