--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -1,154 +1,4 @@
 {
-<<<<<<< HEAD
-    "name": "ocular-ui",
-    "version": "1.0.0",
-    "description": "Ocular AI Core UI",
-    "scripts": {
-        "dev": "next dev -p 3001",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "lint:fix": "next lint --fix",
-        "preview": "next build && next start",
-        "typecheck": "tsc --noEmit",
-        "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-        "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
-    },
-    "private": true,
-    "keywords": [
-        "nextjs"
-    ],
-    "author": "Michael Chap Moyo",
-    "license": "",
-    "dependencies": {
-        "@babel/runtime": "^7.23.9",
-        "@babel/runtime-corejs3": "^7.23.9",
-        "@faker-js/faker": "^8.3.1",
-        "@fluentui/react": "^8.117.2",
-        "@heroicons/react": "v1",
-        "@hookform/resolvers": "^3.3.2",
-        "@phosphor-icons/react": "^2.0.15",
-        "@radix-ui/react-alert-dialog": "^1.0.5",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-checkbox": "^1.0.4",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-popover": "^1.0.7",
-        "@radix-ui/react-radio-group": "^1.1.3",
-        "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-separator": "^1.0.3",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-switch": "^1.0.3",
-        "@radix-ui/react-tabs": "^1.0.4",
-        "@radix-ui/react-toast": "^1.1.5",
-        "@radix-ui/react-tooltip": "^1.0.7",
-        "@supabase/ui": "^0.36.5",
-        "@tabler/icons-react": "^3.1.0",
-        "@tanstack/react-query": "^4.24.10",
-        "@tanstack/react-table": "^8.11.3",
-        "@tremor/react": "^3.12.2",
-        "@types/axios": "^0.14.0",
-        "apexcharts": "^3.46.0",
-        "axios": "^1.6.7",
-        "class-variance-authority": "^0.4.0",
-        "classnames": "^2.5.1",
-        "clsx": "^1.2.1",
-        "cmdk": "^0.2.0",
-        "date-fns": "^3.0.6",
-        "framer-motion": "^11.2.10",
-        "fs": "^0.0.1-security",
-        "lucide-preact": "^0.330.0",
-        "lucide-react": "^0.105.0-alpha.4",
-        "marked": "^4.0.12",
-        "next": "13.5.6",
-        "next-themes": "^0.2.1",
-        "nextjs-cors": "^2.1.2",
-        "nprogress": "^0.2.0",
-        "path": "^0.12.7",
-        "q": "^1.5.1",
-        "qs": "^6.11.2",
-        "react": "18.2.0",
-        "react-day-picker": "^8.10.0",
-        "react-dom": "18.2.0",
-        "react-hook-form": "^7.49.2",
-        "react-icons": "^4.12.0",
-        "react-id-swiper": "^4.0.0",
-        "react-is": "18.2.0",
-        "react-jwt": "^1.2.0",
-        "react-loader-spinner": "^6.1.6",
-        "react-markdown": "^9.0.1",
-        "react-resizable-panels": "^1.0.5",
-        "react-router-dom": "^6.21.1",
-        "react-syntax-highlighter": "^15.5.0",
-        "react-textarea-autosize": "^8.5.3",
-        "remark-gfm": "^4.0.0",
-        "remark-math": "^6.0.0",
-        "sharp": "^0.33.2",
-        "sonner": "^1.3.1",
-        "styled-components": "5.3.11",
-        "swiper": "^8.0.7",
-        "swr": "^2.2.4",
-        "tailwind-merge": "^1.13.2",
-        "tailwindcss-animate": "^1.0.6",
-        "tslib": "^2.3.0",
-        "use-debounce": "^7.0.1",
-        "vercel": "^32.3.0",
-        "zod": "^3.22.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.23.9",
-        "@babel/plugin-transform-runtime": "^7.23.9",
-        "@babel/preset-env": "^7.23.9",
-        "@babel/preset-react": "7.23.3",
-        "@babel/preset-typescript": "^7.23.3",
-        "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-        "@mertasan/tailwindcss-variables": "^2.2.2",
-        "@radix-ui/colors": "^0.1.8",
-        "@tailwindcss/forms": "^0.5.0",
-        "@tailwindcss/typography": "^0.5.2",
-        "@testing-library/react": "14.0.0",
-        "@types/jest": "29.5.11",
-        "@types/marked": "^4.0.3",
-        "@types/node": "18.19.8",
-        "@types/nprogress": "^0.2.3",
-        "@types/react": "18.2.46",
-        "@types/react-dom": "18.2.18",
-        "@types/react-is": "18.2.4",
-        "@types/react-syntax-highlighter": "^15.5.11",
-        "@types/styled-components": "5.1.34",
-        "@typescript-eslint/eslint-plugin": "5.62.0",
-        "autoprefixer": "^10.4.14",
-        "babel-jest": "29.7.0",
-        "babel-loader": "^9.1.3",
-        "babel-plugin-styled-components": "1.13.3",
-        "copy-webpack-plugin": "^12.0.2",
-        "cypress": "^13.4.0",
-        "deepmerge": "^4.2.2",
-        "eslint": "8.56.0",
-        "eslint-config-next": "13.5.6",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-cypress": "2.15.1",
-        "eslint-plugin-import": "2.29.1",
-        "eslint-plugin-jsx-a11y": "6.8.0",
-        "eslint-plugin-react": "7.33.2",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "eslint-plugin-tailwindcss": "^3.13.0",
-        "file-loader": "^6.2.0",
-        "jest": "29.7.0",
-        "jest-environment-jsdom": "29.7.0",
-        "mini-svg-data-uri": "^1.4.4",
-        "nx": "17.2.8",
-        "postcss": "^8.4.24",
-        "prettier": "2.8.8",
-        "prettier-plugin-tailwindcss": "^0.1.8",
-        "tailwindcss": "^3.3.2",
-        "ts-jest": "29.1.1",
-        "ts-node": "10.9.1",
-        "typescript": "5.1.6",
-        "url-loader": "^4.1.1"
-    }
-=======
   "name": "ocular-ui",
   "version": "1.0.0",
   "description": "Ocular AI Core UI",
@@ -184,6 +34,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -192,12 +43,15 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/ui": "^0.36.5",
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-table": "^8.11.3",
     "@tremor/react": "^3.12.2",
     "@types/axios": "^0.14.0",
+    "@uploadthing/react": "^6.6.0",
+    "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.31.3",
+    "add": "^2.0.6",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.4.0",
@@ -213,13 +67,16 @@
     "next-themes": "^0.2.1",
     "nextjs-cors": "^2.1.2",
     "nprogress": "^0.2.0",
+    "npx": "^10.2.2",
     "path": "^0.12.7",
+    "progress": "^2.0.3",
     "q": "^1.5.1",
     "qs": "^6.11.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^4.12.0",
     "react-id-swiper": "^4.0.0",
     "react-is": "18.2.0",
@@ -232,6 +89,7 @@
     "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "shadcn-ui": "^0.8.0",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "styled-components": "5.3.11",
@@ -240,6 +98,7 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "tslib": "^2.3.0",
+    "uploadthing": "^6.12.0",
     "use-debounce": "^7.0.1",
     "vercel": "^32.3.0",
     "zod": "^3.22.4"
@@ -293,8 +152,7 @@
     "tailwindcss": "^3.3.2",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1"
   }
->>>>>>> 428636d3f20f7d27ce2eac68ea03b490bfad2c86
 }
