Fix WebConnector And Add Puppeteer To Docker

--- a/packages/ocular/Dockerfile.local
+++ b/packages/ocular/Dockerfile.local
@@ -1,17 +1,37 @@
 
 FROM node:18-alpine
 
-
-RUN apk update && \
-  apk add chromium
-
 WORKDIR /usr/src/app
 
+
+# Installs latest Chromium (100) package.
+RUN apk add --no-cache \
+  chromium \
+  nss \
+  freetype \
+  harfbuzz \
+  ca-certificates \
+  ttf-freefont \
+  nodejs
+
+# Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
+# Puppeteer v13.5.0 works with Chromium 100.
+RUN npm install puppeteer@13.5.0
+
+# Add user so we don't need --no-sandbox.
+RUN addgroup -S pptruser && adduser -S -G pptruser pptruser \
+  && mkdir -p /home/pptruser/Downloads /app \
+  && chown -R pptruser:pptruser /home/pptruser \
+  && chown -R pptruser:pptruser /app
+
+# # Run everything after as non-privileged user.
+# USER pptruser
+
+
 RUN npm cache clean --force
-
-# Install turbo
 RUN npm install -g turbo 
-
 # Copy root package.json and lockfile
 COPY package.json ./
 
@@ -29,6 +49,8 @@ COPY turbo.json ./
 COPY . .
 
 RUN npm install --verbose
+# Install turbo
+
 RUN turbo build
 
 WORKDIR /usr/src/app/packages/ocular
