--- a/packages/apps/web-connector/package.json
+++ b/packages/apps/web-connector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webConnector",
+  "name": "web-connector",
   "version": "0.0.0",
   "description": "WebConnector Application for Ocular",
   "main": "dist/index.js",
