--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -44,6 +44,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-table": "^8.11.3",
@@ -84,6 +87,7 @@
     "react-jwt": "^1.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.0.0",
     "react-resizable-panels": "^1.0.5",
     "react-router-dom": "^6.21.1",
     "react-syntax-highlighter": "^15.5.0",
