--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -42,6 +42,7 @@
     "core-js": "^3.36.1",
     "cors": "^2.8.5",
     "d3-dsv": "^2.0.0",
+    "eslint-config-next": "^14.2.4",
     "express-session": "^1.18.0",
     "fast-glob": "^3.3.2",
     "fs-exists-cached": "^1.0.0",
@@ -53,6 +54,7 @@
     "mammoth": "^1.7.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "next": "^14.2.4",
     "node-schedule": "^2.1.1",
     "ocular-telemetry": "^1.0.0",
     "ora": "^3.4.0",
@@ -64,6 +66,8 @@
     "pdf-parse": "^1.1.1",
     "puppeteer": "^22.10.0",
     "rate-limiter-flexible": "^5.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "scrypt-kdf": "^2.0.1",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
