--- a/packages/ocular-models-server/Dockerfile.models
+++ b/packages/ocular-models-server/Dockerfile.models
@@ -1,13 +1,13 @@
 # Use Ubunt 22.04 as base image
 FROM ubuntu:22.04
 
-# Install Python 3
-# Make sure to not install recommends and to clean the 
-# install to minimize the size of the container as much as possible.
+# Install Python 3 and Python development package
 RUN apt-get update && \
   apt-get install --no-install-recommends -y python3=3.10.6-1~22.04 && \
   apt-get install --no-install-recommends -y python3-pip && \
   apt-get install --no-install-recommends -y python3-venv=3.10.6-1~22.04 && \
+  apt-get install --no-install-recommends -y python3-dev && \
+  apt-get install --no-install-recommends -y build-essential && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
