--- a/packages/ocular/Dockerfile.dev
+++ b/packages/ocular/Dockerfile.dev
@@ -1,7 +1,9 @@
 
 FROM node:18-alpine
 
-RUN apk update && \apk add chromium
+RUN apk add --no-cache build-base
+
+RUN apk update && apk add chromium
 
 WORKDIR /usr/src/app
 
