--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -37,6 +37,7 @@
     "@ocular/utils": "*",
     "@types/multer": "^1.4.11",
     "@xenova/transformers": "^2.17.1",
+    "axios": "^1.7.2",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
