--- a/.github/workflows/docker-build-ocular-backend.yml
+++ b/.github/workflows/docker-build-ocular-backend.yml
@@ -22,5 +22,5 @@ jobs:
       with:
         context: ./
         file: ./packages/ocular/Dockerfile.local
-        push: true
+        push: false
         tags: ocular:latest
