--- a/.github/workflows/docker-build-ocular-ui.yml
+++ b/.github/workflows/docker-build-ocular-ui.yml
@@ -23,4 +23,4 @@ jobs:
         context: ./
         file: ./packages/ocular-ui/Dockerfile
         push: false
-        tags: ocular-ui:latest
+        tags: ocular/ocular-ui:latest
