--- a/.github/workflows/docker-build-and-push-ocular-backend.yml
+++ b/.github/workflows/docker-build-and-push-ocular-backend.yml
@@ -22,7 +22,7 @@ jobs:
       uses: docker/login-action@v3
       with: 
         username: ${{secrets.DOCKER_USERNAME}}
-        token: ${{ secrets.DOCKER_TOKEN }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Set Up Docker Builders
       uses: docker/setup-buildx-action@v3
