--- a/.github/workflows/docker-build-ocular-backend.yml
+++ b/.github/workflows/docker-build-ocular-backend.yml
@@ -23,4 +23,4 @@ jobs:
         context: ./
         file: ./packages/ocular/Dockerfile.local
         push: false
-        tags: ocular/ocular:latest
+        tags: ocularengineering/ocular-backend:build
