--- a/.github/workflows/docker-build-and-push-ocular-models-server.yml
+++ b/.github/workflows/docker-build-and-push-ocular-models-server.yml
@@ -2,8 +2,9 @@ name: Build and Push Ocular Models Server on Release and Tag
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-and-push:
