--- a/.github/workflows/docker-build-and-push-ocular-ui.yml
+++ b/.github/workflows/docker-build-and-push-ocular-ui.yml
@@ -30,4 +30,5 @@ jobs:
         file: ./packages/ocular-ui/Dockerfile
         push: true
         tags:
+          ocularengineering/ocular-ui:${{ github.ref_name }}
           ocularengineering/ocular-ui:latest
