Update Docker Actions To Push To Docker On Tags (#172)
* Update Docer Actions To Push To Docker On Tags

* Update docker-build-and-push-ocular-models-server.yml

* Update docker-build-and-push-ocular-ui.yml

* Update docker-build-and-push-ocular-backend.yml

* Update docker-build-and-push-ocular-models-server.yml

* Update docker-build-and-push-ocular-ui.yml

--- a/.github/workflows/docker-build-and-push-ocular-backend.yml
+++ b/.github/workflows/docker-build-and-push-ocular-backend.yml
@@ -2,9 +2,8 @@ name: Build and Push Ocular Backend Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:        
+      - '*'       
 
 jobs:
   push_to_docker_registry:
@@ -31,4 +30,5 @@ jobs:
         file: ./packages/ocular/Dockerfile.local
         push: true
         tags:
+          ocularengineering/ocular-backend:${{ github.ref_name }}
           ocularengineering/ocular-backend:latest
