--- a/.github/workflows/docker-build-and-push-ocular-models-server.yml
+++ b/.github/workflows/docker-build-and-push-ocular-models-server.yml
@@ -2,9 +2,8 @@ name: Build and Push Ocular Models Server on Release and Tag
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:        
+      - '*'
 
 jobs:
   build-and-push:
@@ -30,4 +29,5 @@ jobs:
         file: ./packages/ocular-models-server/Dockerfile.models
         push: true
         tags:
+          ocularengineering/ocular-model-server:${{ github.ref_name }}
           ocularengineering/ocular-model-server:latest
