--- a/.github/workflows/docker-build-and-push-ocular-ui.yml
+++ b/.github/workflows/docker-build-and-push-ocular-ui.yml
@@ -2,9 +2,8 @@ name: Build and Push Ocular Web UI Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:        
+      - '*'
 
 jobs:
   push_to_docker_registry:
@@ -31,4 +30,5 @@ jobs:
         file: ./packages/ocular-ui/Dockerfile
         push: true
         tags:
+          ocularengineering/ocular-ui:${{ github.ref_name }}
           ocularengineering/ocular-ui:latest
