--- a/.github/workflows/docker-build-and-push-ocular-models-server.yml
+++ b/.github/workflows/docker-build-and-push-ocular-models-server.yml
@@ -28,6 +28,6 @@ jobs:
         context: ./
         file: ./packages/ocular-models-server/Dockerfile.models
         push: true
-        tags:
+        tags: |
           ocularengineering/ocular-model-server:${{ github.ref_name }}
           ocularengineering/ocular-model-server:latest
