--- a/.github/workflows/docker-build-and-push-ocular-backend.yml
+++ b/.github/workflows/docker-build-and-push-ocular-backend.yml
@@ -3,7 +3,7 @@ name: Build and Push Ocular Backend Docker Image CI
 on:
   push:
     tags:        
-      - '**'       
+      - '*'       
 
 jobs:
   push_to_docker_registry:
@@ -29,6 +29,6 @@ jobs:
         context: ./
         file: ./packages/ocular/Dockerfile.local
         push: true
-        tags:
+        tags: |
           ocularengineering/ocular-backend:${{ github.ref_name }}
           ocularengineering/ocular-backend:latest
