Update docker-build-and-push-ocular-ui.yml (#175)
* Update docker-build-and-push-ocular-ui.yml

* Update docker-build-and-push-ocular-models-server.yml

* Update docker-build-and-push-ocular-backend.yml

* Update docker-build-and-push-ocular-models-server.yml

* Update docker-build-and-push-ocular-ui.yml

--- a/.github/workflows/docker-build-and-push-ocular-models-server.yml
+++ b/.github/workflows/docker-build-and-push-ocular-models-server.yml
@@ -3,7 +3,7 @@ name: Build and Push Ocular Models Server on Release and Tag
 on:
   push:
     tags:        
-      - '**'
+      - '*'
 
 jobs:
   build-and-push:
@@ -28,6 +28,6 @@ jobs:
         context: ./
         file: ./packages/ocular-models-server/Dockerfile.models
         push: true
-        tags:
+        tags: |
           ocularengineering/ocular-model-server:${{ github.ref_name }}
           ocularengineering/ocular-model-server:latest
